--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   ferry_flutter: ^0.8.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
+  go_router: ^6.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
